--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
             // request.open("GET", '127.0.0.1/temi/api/analyze');
             // request.send(data);
             
-            //console.log(data)
+            console.log(data)
 
-            var url = 'http://192.168.2.15:8080/temi/api/analyze';
+            //var url = 'http://192.168.2.15:8080/temi/api/analyze';
 
-            fetch(url, {
-              method: "POST",
-              body: JSON.stringify({"img": data})
-            }).then(res => {
-              console.log("Request complete! response:", res.json());
-            });
+            // fetch(url, {
+            //   method: "POST",
+            //   body: JSON.stringify({"img": data})
+            // }).then(res => {
+            //   console.log("Request complete! response:", res.json());
+            // });
 
           } else {
             clearphoto();
