--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <script>
 
       function onDetectionDataChanged(json) {
-        1 = 1
+        var a = 1
+      }
+
+      function onDetectionStateChanged(json) {
+        var a  = 1
       }
 
       (function () {
