--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             
             console.log(data)
 
-            Android.detectFaces(data);
+            window["Android"].detectFaces(data);
 
             //var url = 'http://192.168.2.15:8080/temi/api/analyze';
 
