--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         target="#modal-success">Take photo</button>
     </div>
     <canvas id="canvas"></canvas>
+    <div class="c-face-container">
+      <p class="faces">Face 1 - Age: </p>
+    </div>
+    
 </body>
 
 </html>
