--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-%%html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,11 +13,13 @@
   <div class="form-group">
     <div class="camera">
       <video id="video">Video stream not available.</video>
-      <button type="button" id="startbutton" class="btn btn-success" data-toggle="modal" data-
-        target="#modal-success">Take photo</button>
+      <button type="button" id="startbutton" class="btn btn-success" >Take photo</button>
     </div>
     <canvas id="canvas"></canvas>
     <div class="c-face-container">
+    </div>
+
+    <div class="c-result-container">
     </div>
     
 </body>
