--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microphone Test</title>
-    <link rel="stylesheet" href="style/style_mic.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <script src="script/app2.js"></script>
 </head>
+
 <body>
-    <div class="bar" id="volume-visualizer"></div>
-    <div class="components">
-        <button class="techkib-online-tool-button" id="start">
-            <i class="fa fa-microphone"></i> Start The Test
-        </button>
-        <button class="techkib-online-tool-button" id="stop"><i class="fa fa-stop"></i> Stop</button>
-        <button class="techkib-online-tool-button" onClick="window.location.reload();">
-            <i class="fa fa-refresh"> </i> Reload Test Environment
-        </button>
+  <div class="form-group">
+    <div class="camera">
+      <video id="video">Video stream not available.</video>
+      <button type="button" id="startbutton" class="btn btn-success" >Take photo</button>
     </div>
-    <h3 id="tex"></h3>
+    <canvas id="canvas"></canvas>
+    <div class="c-face-container">
+    </div>
+
+    <!-- <div class="c-result-container">
+    </div> -->
+    
 </body>
-<script src="script/mic.js"></script>
+
 </html>
