--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
       <video id="video">Video stream not available.</video>
       <button type="button" id="startbutton" class="btn btn-success" >Take photo</button>
     </div>
-    <canvas id="canvas"></canvas>
+    <!-- <canvas id="canvas"></canvas> -->
     <div class="c-face-container">
     </div>
+
+    <br>
+    <br>
+    <br>
 
     <div class="bar" id="volume-visualizer"></div>
     <div class="components">
