--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
       <video id="video">Video stream not available.</video>
       <button type="button" id="startbutton" class="btn btn-success" >Take photo</button>
     </div>
-    <!-- <canvas id="canvas"></canvas> -->
+    <canvas id="canvas"></canvas>
     <div class="c-face-container">
     </div>
-
-    <br>
-    <br>
-    <br>
 
     <div class="bar" id="volume-visualizer"></div>
     <div class="components">
@@ -36,11 +32,11 @@
             <i class="fa fa-refresh"> </i> Reload Test Environment
         </button>
     </div>
-    <h3 id="tex"></h3>
+    <h3 id="tex"></h3> -->
 
     <!-- <div class="c-result-container">
     </div> -->
     
 </body>
-<script src="script/mic.js"></script>
+<!-- <script src="script/mic.js"></script> -->
 </html>
